<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    tools:context="com.example.android.scorecounter.MainActivity">


    <TextView
        android:id="@+id/welcome"
        style="@style/TextStyle"
        android:layout_marginBottom="@dimen/marginS"
        android:layout_marginTop="@dimen/marginXXL"
        android:text="@string/welcome"
        android:textSize="@dimen/textM" />

    <TextView
        android:id="@+id/enterNames"
        style="@style/TextStyle"
        android:layout_below="@id/welcome"
        android:text="@string/enterNames"
        android:textSize="@dimen/textXS" />

    <EditText
        android:id="@+id/nameOne"
        style="@style/EditStyle"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/enterNames"
        android:layout_marginLeft="@dimen/marginXL"
        android:hint="@string/fillFirst" />

    <EditText
        android:id="@+id/nameTwo"
        style="@style/EditStyle"
        android:layout_alignParentRight="true"
        android:layout_below="@id/enterNames"
        android:layout_marginRight="@dimen/marginXL"
        android:hint="@string/fillSecond" />

    <TextView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginS"
        android:background="@drawable/rectangle"
        android:paddingBottom="@dimen/marginS"
        android:paddingLeft="@dimen/marginXL"
        android:paddingRight="@dimen/marginXL"
        android:paddingTop="@dimen/marginS"
        android:text="@string/play"
        android:textColor="@color/mygrey"
        android:textSize="@dimen/textSmall" />

</RelativeLayout>
