<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green"
    android:orientation="vertical"
    tools:context="com.example.android.scorecounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerOne"
                style="@style/TextMain"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/marginM"
                android:text="@string/Player1"
                android:textAllCaps="true"
                android:textSize="@dimen/textSmall" />

            <ImageButton
                android:layout_width="@dimen/imageButton"
                android:layout_height="@dimen/imageButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginM"
                android:layout_marginTop="@dimen/marginL"
                android:onClick="strikeFor1"
                android:scaleType="fitCenter"
                android:src="@drawable/ball" />

            <TextView
                android:id="@+id/player_1_score"
                style="@style/TextMain"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/marginM"
                android:text="@string/zero"
                android:textSize="@dimen/textBig" />

            <Button
                android:layout_width="@dimen/buttonW"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="addTo1"
                android:text="@string/addtototal" />


            <Button
                android:layout_width="@dimen/buttonW"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="reset1"
                android:text="@string/resethole" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerTwo"
                style="@style/TextMain"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/marginM"
                android:text="@string/Player2"
                android:textAllCaps="true"
                android:textSize="@dimen/textSmall" />

            <ImageButton
                android:layout_width="@dimen/imageButton"
                android:layout_height="@dimen/imageButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginM"
                android:layout_marginTop="@dimen/marginL"
                android:onClick="strikeFor2"
                android:scaleType="fitCenter"
                android:src="@drawable/ball" />

            <TextView
                android:id="@+id/player_2_score"
                style="@style/TextMain"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/marginM"
                android:text="@string/zero"
                android:textSize="@dimen/textBig" />

            <Button
                android:layout_width="@dimen/buttonW"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="addTo2"
                android:text="@string/addtototal" />

            <Button
                android:layout_width="@dimen/buttonW"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="reset2"
                android:text="@string/resethole" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/TextMain"
        android:layout_width="wrap_content"
        android:text="@string/total"
        android:textAllCaps="true"
        android:textSize="@dimen/textSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_1_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/zero"
            android:textColor="@color/mygrey"
            android:textSize="@dimen/textSmall" />

        <TextView
            android:id="@+id/player_2_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/zero"
            android:textColor="@color/mygrey"
            android:textSize="@dimen/textSmall" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/marginM"
        android:onClick="resetAll"
        android:text="@string/resetgame" />

</LinearLayout>
